Fix display on tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,13 +36,19 @@
   overflow-y: hidden;
 }
 
+@media (max-width: variables.$tablet-max-width) {
+  #content {
+    max-width: none;
+  }
+}
+
 @media (max-width: variables.$mobile-device-max-width) {
   #page {
     padding: 0;
   }
 
   #content {
-    max-width: none;
+    // max-width: none;
     width: 100%;
 
     border-left: none;
